--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,16 @@
-<p>product works!</p>
+<br/>
+
+PRODUCT MODEL <br/>
+----------------
+<br/>
+<br/>
+{{product.name}}
+<br/>
+<br/>
+{{product.year}}
+<br/>
+<br/>
+{{product.date}}
+<br/>
+<br/>
+{{product.bool}}
