--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,8 @@ Tarih: {{date}}
 Bool: {{bool}}
 <br>
 <br>
-
+<!--Eşzamanlı olarak gerçekleşen değişikliği algılayıp ekrana render eden yapı : two-way binding
+    Alternatif olarak ngModel kullanılabilir.-->
 <form [formGroup]="form">
   Ad Soyad Reactive Form: <input type="text" formControlName="name">
   <br>
